@@ -1,9 +1,10 @@
+
 Obsoletes: pupmod-autofs-test
 Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
 Requires: pupmod-puppetlabs-stdlib >= 4.9.0-0
 Requires: pupmod-simp-compliance_markup < 2.0.0-0
-Requires: pupmod-simp-compliance_markup >= 1.0.1-0
-Requires: pupmod-simp-nfs < 5.0.0-0
-Requires: pupmod-simp-nfs >= 4.5.2-0
-Requires: pupmod-simp-simpcat < 6.0.0-0
-Requires: pupmod-simp-simpcat >= 5.0.1-0
+Requires: pupmod-simp-compliance_markup >= 1.0.2-0
+Requires: pupmod-simp-nfs < 6.0.0-0
+Requires: pupmod-simp-nfs >= 5.0.0-0
+Requires: pupmod-simp-simpcat < 7.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
