@@ -51,7 +51,7 @@ define autofs::map::master (
   $_name = regsubst($name,'/','_','G')
 
   if !defined(File['/etc/auto.master']) {
-    concat_build { 'autofs_master':
+    simpcat_build { 'autofs_master':
       order  => ['*.map'],
       target => '/etc/auto.master'
     }
@@ -62,12 +62,12 @@ define autofs::map::master (
       group     => 'root',
       mode      => '0640',
       audit     => 'content',
-      subscribe => Concat_build['autofs_master'],
+      subscribe => Simpcat_build['autofs_master'],
       notify    => Service['autofs']
     }
   }
 
-  concat_fragment { "autofs_master+${_name}.map":
+  simpcat_fragment { "autofs_master+${_name}.map":
     content => template('autofs/auto.master.erb')
   }
 
